--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">CurrencyConverter</string>
+    <string name="update">Последнее обновление данных: </string>
+    <string name="toolbar_title">CurrencyConverter by PoLLaziY</string>
+    <string name="load_norm">Данные обновлены из сети</string>
+    <string name="load_url_and_str_ex">Не удалось загрузить данные из сети и из памяти</string>
+    <string name="load_url_ex">Не удалось загрузить данные из сети, загружены из памяти</string>
 </resources>
